# Koopa-HV

./: CMakeLists.txt  kernel8.img
src/: kernel.c  linker.ld
src/arch/: boot.S  mm.h
src/bsp/rasp4/: config.txt  io.c  io.h  kernel.c
src/util/: printf.c  printf.h  stdarg.h  type.h  utils.S  utils.h
